--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "travella-admin",
+  "name": "Travella-admin",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -8,8 +8,11 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "ant-design-vue": "^1.7.8",
     "core-js": "^3.6.5",
-    "vue": "^2.6.11"
+    "sass-loader": "^10.2.0",
+    "vue": "^2.6.11",
+    "vue-router": "^3.5.3"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.5.0",
