--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "ant-design-vue": "^1.7.8",
+    "axios": "^0.24.0",
     "core-js": "^3.6.5",
     "sass-loader": "^10.2.0",
     "vue": "^2.6.11",
