--- a/package.json
+++ b/package.json
@@ -8,6 +8,9 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@ckeditor/ckeditor5-build-classic": "^31.1.0",
+    "@ckeditor/ckeditor5-indent": "^31.1.0",
+    "@ckeditor/ckeditor5-vue2": "^1.0.5",
     "ant-design-vue": "^1.7.8",
     "axios": "^0.24.0",
     "core-js": "^3.6.5",
