--- a/package.json
+++ b/package.json
@@ -8,15 +8,16 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
-    "@ckeditor/ckeditor5-build-classic": "^31.1.0",
-    "@ckeditor/ckeditor5-indent": "^31.1.0",
-    "@ckeditor/ckeditor5-vue2": "^1.0.5",
     "ant-design-vue": "^1.7.8",
     "axios": "^0.24.0",
     "core-js": "^3.6.5",
+    "dedent": "^0.7.0",
+    "highlight.js": "^11.4.0",
+    "lodash.debounce": "^4.0.8",
     "moment": "^2.29.1",
     "sass-loader": "^10.2.0",
     "vue": "^2.6.11",
+    "vue-quill-editor": "^3.0.6",
     "vue-router": "^3.5.3"
   },
   "devDependencies": {
